tests/integration/error/result_methods_simple.lcy
// Sprint 15: Result<T,E> 方法测试
struct Error {
    string message
}

// 返回 Result<int, Error> 的函数
int! divide(int a, int b) {
    if b == 0 {
        return Err(Error { message: "division by zero" })
    }
    return Ok(a / b)
}

int main() {
    var res1 = divide(10, 2)
    var res2 = divide(10, 0)

    if res1.is_ok() {
        print("Test 1: OK (expected)\n")
    }
    if res2.is_err() {
        print("Test 2: Err (expected)\n")
    }

    var val1 = res1.unwrap()
    if val1 == 5 {
        print("Test 3: unwrap(ok) passed\n")
    }

    var val2 = res2.unwrap_or(999)
    if val2 == 999 {
        print("Test 4: unwrap_or(err) passed\n")
    }

    print("All Result method tests passed\n")
    return 0
}
